--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 header {
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
   border: 2px solid white;
   text-align: center;
   padding: 20px;
